--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+.navbar button {
+  margin: auto;
+}
+.navbar .hey {
+  color: #39bfbd;
+  font-weight: 500;
+  font-size: 0.9rem;
+  border-bottom: 2px solid #40c6c4;
+  text-decoration: none;
+}
 section {
   min-height: 420px;
 }
