Menambahkan img Portfolio dan update section jumbotron + section portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,51 @@
 .navbar button {
   margin: auto;
 }
+.navbar-nav a {
+  padding: 8px 20px !important;
+}
+.navbar-nav a:hover {
+  background-color: #28b7bb;
+  box-shadow: 5px 10px 30px rgba(64, 198, 196, 0.3);
+  transition: all ease 0.2s;
+}
+.navbar-nav .nav-link:hover {
+  color: #ffffff !important;
+}
 .navbar .hey {
-  color: #39bfbd;
+  color: #28b7bb;
   font-weight: 500;
   font-size: 0.9rem;
-  border-bottom: 2px solid #40c6c4;
+  border-bottom: 2px solid #28b7bb;
   text-decoration: none;
 }
+.jumbotron img {
+  border: 5px solid #28b7bb;
+}
+
+.portfolio {
+  background-color: #e9ecef;
+}
+.portfolio .card {
+  height: 412px;
+}
+.portfolio .card img {
+  height: 250px;
+}
 section {
-  min-height: 420px;
+  min-height: 500px;
 }
 .jumbotron .container img {
   width: 25%;
+}
+.about hr {
+  width: 250px;
+  border-top: 3px solid #28b7bb;
+}
+.portfolio hr {
+  width: 250px;
+  border-top: 3px solid #28b7bb;
+}
+footer {
+  background-color: #28b7bb;
 }
